@@ -37,7 +37,6 @@ DEPENDENCIES
 
    Carp
    Cwd
-   DMS
    File::Path
    Getopt::Std
    LEOCHARRE::CLI
